--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/raji?createDatabaseIfNOtExist=false
+spring.datasource.url=jdbc:mysql://localhost:3306/raji
 spring.datasource.username=raji
 spring.datasource.password=Admin@123
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+spring.jpa.database = MYSQL
+
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true 
 spring.jpa.hibernate.ddl-auto=create
