--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8080
-
+spring.mail.username=rajibhimireddy@gmail.com
+spring.mail.password=bhimireddy@11
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
  spring.mail.properties.mail.smtp.auth=true
