--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.mail.username=rajibhimireddy@gmail.com
 spring.mail.password=bhimireddy@11
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.time-to-live=600000
 
  spring.mail.properties.mail.smtp.auth=true
  spring.mail.properties.mail.smtp.connectiontimeout=5000
