--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,18 @@ spring.cache.redis.time-to-live=600000
  spring.mail.properties.mail.smtp.starttls.enabled=true
  spring.mail.properties.mail.smtp.starttls.required=true
  
+
+#Elastic Search Properties
+spring.data.elasticsearch.repositories.enabled=true
+spring.data.elasticsearch.cluster-nodes=localhost:9200
+spring.data.elasticsearch.cluster-name=elasticsearch
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
