--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,13 @@
 			<artifactId>spring-context-support</artifactId>
 			
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+<dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+   
+</dependency>
+		
 
 		<!-- https://mvnrepository.com/artifact/javax.jms/jms -->
 
