--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		
 
 
 
@@ -194,6 +195,13 @@
 			<artifactId>spring-context-support</artifactId>
 			
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-redis -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-redis</artifactId>
+    <version>1.4.6.RELEASE</version>
+</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
 
 		<!-- https://mvnrepository.com/artifact/javax.jms/jms -->
