--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,10 @@ spring.cache.redis.time-to-live=600000
     
  spring.mail.properties.mail.smtp.starttls.enabled=true
  spring.mail.properties.mail.smtp.starttls.required=true
- 
+ spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 #Elastic Search Properties
 spring.data.elasticsearch.repositories.enabled=true
