--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,12 @@ spring.cache.redis.time-to-live=600000
     
  spring.mail.properties.mail.smtp.starttls.enabled=true
  spring.mail.properties.mail.smtp.starttls.required=true
+ #rabbitmq properties
  spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
+#elasticsearch properties
 spring.data.elasticsearch.repositories.enabled=true
 spring.data.elasticsearch.cluster-nodes=localhost:9200
 spring.data.elasticsearch.cluster-name=elasticsearch
