[raji]modifications done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/raji
+spring.datasource.url=jdbc:mysql://localhost:3306/raji123
 spring.datasource.username=raji
 spring.datasource.password=Admin@123
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -7,13 +7,14 @@ spring.jpa.database = MYSQL
 
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update  
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-server.port=8080
+server.port=8081
 spring.mail.username=rajireddy98761@gmail.com
 spring.mail.password=bhimireddy@11
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.gmail.com 
+
 spring.mail.port=587
 spring.cache.type=redis
 spring.redis.host=localhost
